2007-01-09  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.18.modules: Specify a virtual gnomemm repository, 
	and specify the gnomemm modules as using the repository. Unlike before, 
	with cvs, they will then be checked out to top-level directories.

2007-01-08  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.18.modules: vino depends on dbus-glib

2007-01-08  Murray Cumming  <murrayc@murrayc.com>

	* sample.jhbuildrc: Update for the GNOME cvs->svn change.

2007-01-07  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/mesa.py: introduced special module type for mesa;
	necessary to use xorg moduleset (bug #349343, module by Eric Anholt)

2007-01-07  Frederic Peters  <fpeters@0d.be>

	* modulesets/pulseaudio.modules: added PulseAudio moduleset
	(bug #348572)

2007-01-07  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: removed obsolete libbonobouimm from
	meta-gnome-c++ (bug #393716, patch by Marc-Andre Lureau)

2007-01-07  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: changed ekiga module to point to
	appropriate subversion tag.

2007-01-07  Marco Pesenti Gritti  <mpg@redhat.com>

	* modulesets/freedesktop.modules: dbus-python use autotools now

2007-01-05  Mark McLoughlin  <mark@skynet.ie>

	Combination of patches from myself and
	Frederic Peters <fpeters@0d.be>

	See bug #393147 and #347597

	* jhbuild/versioncontrol/svn.py: back out the trunk
	fiddling behaviour from before and add:
	  + A "trunk_path" attribute to <repository type="svn">
	    which defaults to "trunk". Set to "" if the trunks
	    are in the toplevel directory
	  + A "branches_path" attribute to <repository type="svn">
	    which defaults to "branches".
	  + Support for the "revision" attribute on <branch>

2007-01-05  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: added dependency on gnome-desktop for
	epiphany (bug #393079)
	
2007-01-05  Frederic Peters  <fpeters@0d.be>
