@@ -28,7 +28,7 @@
     what the user requested.</para>
 
     <para>JHBuild was originally written for building <ulink
-    url="http://www.gnome.org">Gnome</ulink>, but has since been
+    url="http://www.gnome.org">GNOME</ulink>, but has since been
     extended to make it usable with other projects.  A <quote>module
     set</quote> file can be hosted on a web server, allowing people to
     provide build rules independent of the JHBuild.</para>
@@ -229,7 +229,7 @@ os.environ['INSTALL'] = os.path.join(os.environ['HOME'],
 	    do this).  This variable is a dictionary where the keys
 	    are short repository names (for example, <systemitem
 	    class="systemname">gnome.org</systemitem> is used for the
-	    Gnome CVS repository), and the values are the alternative
+	    GNOME CVS repository), and the values are the alternative
 	    CVS root strings.</simpara>
 	  </listitem>
 	</varlistentry>
@@ -618,7 +618,7 @@ os.environ['INSTALL'] = os.path.join(os.environ['HOME'],
 	<arg rep="repeat"><replaceable>argument</replaceable></arg>
       </cmdsynopsis>
 
-      <para>If using JHBuild to build Gnome, this command can be
+      <para>If using JHBuild to build GNOME, this command can be
       useful in X startup scripts.</para>
     </section>
 
@@ -909,7 +909,7 @@ os.environ['INSTALL'] = os.path.join(os.environ['HOME'],
 	    JHBuild's included module sets, or a full HTTP URL to
 	    refer to an externally managed module set.  Currently
 	    defaults to <literal>'gnome-2.10'</literal>, but is
-	    usually updated as Gnome development progresses.</simpara>
+	    usually updated as GNOME development progresses.</simpara>
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
@@ -1476,10 +1476,10 @@ done</programlisting>
 	</qandaentry>
       </qandadiv>
       <qandadiv>
-	<title>Building Gnome</title>
+	<title>Building GNOME</title>
 	<qandaentry>
 	  <question>
-	    <simpara>What other prerequisites are needed to build Gnome
+	    <simpara>What other prerequisites are needed to build GNOME
 	    with JHBuild?</simpara>
 	  </question>
 	  <answer>
@@ -1521,7 +1521,7 @@ done</programlisting>
 	</qandaentry>
 	<qandaentry>
 	  <question>
-	    <simpara>I've built Gnome with JHBuild.  How do I run
+	    <simpara>I've built GNOME with JHBuild.  How do I run
 	    it?</simpara>
 	  </question>
 	  <answer>
@@ -1537,7 +1537,7 @@ exec jhbuild run gnome-session</programlisting>
 	</qandaentry>
 	<qandaentry>
 	  <question>
-	    <simpara>I built Gnome using JHBuild with
+	    <simpara>I built GNOME using JHBuild with
 	    <varname>prefix</varname> set to <filename>/usr</filename>,
 	    and now my system is broken.  What should I do?</simpara>
 	  </question>
