@@ -1162,7 +1162,7 @@
     </dependencies>
   </autotools>
   <autotools id="libgdamm">
-    <branch repo="svn.gnomemm" revision="libgda-1-2"/>
+    <branch repo="svn.gnomemm" revision="libgda-1-2" />
     <dependencies>
       <dep package="gtkmm"/>
       <dep package="libgda-1-2"/>
