@@ -1,3 +1,7 @@
+2007-01-09  Guillaume Desmottes  <cass@skynet.be>
+
+	* doc/jhbuild.xml: Documentation: Correct spelling of Gnome as GNOME.
+
 2007-01-09  Murray Cumming  <murrayc@murrayc.com>
 
 	* modulesets/gnome-2.18.modules: Specify a virtual gnomemm repository, 
